# eiga

./: Cargo.toml  JUSTFILE  README.md
.github/workflows/: ci.yml
eiga_builder_derive/: Cargo.toml  LICENSE
eiga_builder_derive/src/: lib.rs
examples/: get_movie.rs  get_movie_details.rs  manual_paging.rs  paging.rs  search_movie.rs
old_examples/: get_movie_details.rs
old_src/: endpoint.rs  error.rs  lib.rs  page.rs  parameters.rs
old_src/api/configuration/: jobs.rs
old_src/api/movie/: credits.rs
old_src/api/search/: mod.rs
old_tests/it/: configuration.rs  error.rs  search.rs
src/: client.rs  country.rs  endpoint.rs  error.rs  from_response.rs  http.rs  language.rs  lib.rs  main.rs  models.rs  page.rs  parameters.rs  prelude.rs  query.rs  query_parameters.rs  tmdb.rs
src/api/: mod.rs  movie.rs  network.rs  search.rs
src/api/configuration/: api_configuration.rs  countries.rs  languages.rs  mod.rs  primary_translations.rs  timezones.rs
src/api/movie/: alternative_titles.rs  credits.rs  details.rs  mod.rs
src/api/search/: mod.rs  movies.rs
src/models/: movie.rs  network.rs
tests/: it.rs
tests/it/: configuration.rs  error.rs  main.rs  movie.rs  search.rs
