[package]
name = "eiga"
version = "0.2.0"
edition = "2021"
authors = ["Zach Madsen <zachcmadsen@gmail.com>"]
license = "MIT"
description = "A WIP TMDB API client"
repository = "https://github.com/zachcmadsen/eiga"
readme = "README.md"
keywords = ["TMDB"]

[dependencies]
eiga_builder_derive = { version = "0.2.0", path = "eiga_builder_derive" }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ureq = { version = "2.4.0", features = ["json"] }
url = "2.2.2"

[dev-dependencies]
httpmock = "0.6.6"
