[package]
name = "eiga"
version = "0.4.0"
edition = "2021"
authors = ["Zach Madsen <zachcmadsen@gmail.com>"]
license = "MIT"
description = "A WIP TMDB API client"
repository = "https://github.com/zachcmadsen/eiga"
readme = "README.md"
keywords = ["TMDB"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
