[package]
name = "eiga"
version = "0.3.0"
edition = "2021"
authors = ["Zach Madsen <zachcmadsen@gmail.com>"]
license = "MIT"
description = "A WIP TMDB API client"
repository = "https://github.com/zachcmadsen/eiga"
readme = "README.md"
keywords = ["TMDB"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
eiga_builder_derive = { version = "0.3.0", path = "eiga_builder_derive" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ureq = { version = "2.4.0", features = ["json"] }
url = "2.2.2"

http = "0.2"
hyper = { version = "0.14", features = ["http1", "client"] }
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]
httpmock = "0.6.6"
